--- a/views/index.jade
+++ b/views/index.jade
@@ -8,15 +8,15 @@ block content
                     img(style='width:35px;height: 35px;',src='http://www.gravatar.com/avatar/00000000000000000000000000000000')
                 div
                     p
-                        a(href='https://github.com/djyde/StoreDB')
+                        a.repoName(href='https://github.com/djyde/StoreDB')
                             span(style='margin-right: 20px; font-size: 18px')
-                                b Repo Name
+                                b StoreDB
                         span(style='margin-right: 16px; color: #666;')
                             b star 63
                         span(style='margin-right: 16px; color: #666;')
                             b fork 30
                     p(style='margin: 0',style='color: #666').
-                        Some descriptions
+                        A LocalStorage library makes you use localStorage more easily and friendly with JSON just like Mongodb
                     p(style='color: #999;') 1小时前由 
                         a(style='color: #69C',href='/ddd') XXXXXXX 
                         分享
@@ -26,7 +26,7 @@ block content
                     img(style='width:35px;height: 35px;',src='http://www.gravatar.com/avatar/00000000000000000000000000000000')
                 div
                     p
-                        a(href='https://github.com/djyde/StoreDB')
+                        a.repoName(href='https://github.com/djyde/StoreDB')
                             span(style='margin-right: 20px; font-size: 18px')
                                 b Repo Name
                         span(style='margin-right: 16px; color: #666;')
