--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,8 @@ html
     head
         link(rel='stylesheet',href='/stylesheets/global.css')
         link(rel='stylesheet',href='/stylesheets/index.css')
+        link(rel='stylesheet',href='/stylesheets/submit.css')
+        link(rel='stylesheet',href='/stylesheets/login.css')
     body
     div#header
         table#headtable
