--- a/views/submit.jade
+++ b/views/submit.jade
@@ -1,16 +1,21 @@
 extends layout
 
 block content
-	form#subForm
-		p 
-			b
-				label RepoName:
-		p 
-			input(type='text',id='reponame')
-		p
-			b 
-				label RepoURL:
-		p
-			input(type='text',id='repourl',style='width: 400px;')
-		p
-			input.btn(type='submit',value='提交链接')
+    form#subForm(action='/submit',method='post')
+        p 
+            b
+                label RepoName:
+        p 
+            input(type='text',name='reponame')
+        p
+            b 
+                label RepoURL:
+        p
+            input(type='text',name='repourl',style='width: 400px;')
+        p
+            b
+                label Description:
+        p
+            textarea(name='desc',style='width: 400px; height: 100px')
+        p
+            input.btn(type='submit',value='提交链接')
