--- a/views/index.jade
+++ b/views/index.jade
@@ -3,41 +3,20 @@ extends layout
 block content
     div#background        
         div#cont
+            - for (var i=0; i < result.length; i++){
+            // p #{result[i].repoURL}
             div.main
                 div(style='float: left; margin-right: 20px;margin-bottom: 25px;')
                     img(style='width:35px;height: 35px;',src='http://www.gravatar.com/avatar/00000000000000000000000000000000')
                 div
-                    p
-                        a.repoName(href='https://github.com/djyde/StoreDB')
-                            span(style='margin-right: 20px; font-size: 18px')
-                                b StoreDB
-                        span(style='margin-right: 16px; color: #666;')
-                            b star 63
-                        span(style='margin-right: 16px; color: #666;')
-                            b fork 30
-                    p(style='margin: 0',style='color: #666').
-                        A LocalStorage library makes you use localStorage more easily and friendly with JSON just like Mongodb
-                    p(style='color: #999;') 1小时前由 
-                        a(style='color: #69C',href='/ddd') XXXXXXX 
-                        分享
 
-            div.main
-                div(style='float: left; margin-right: 20px;margin-bottom: 25px;')
-                    img(style='width:35px;height: 35px;',src='http://www.gravatar.com/avatar/00000000000000000000000000000000')
-                div
                     p
-                        a.repoName(href='https://github.com/djyde/StoreDB')
+                        a.repoName(href= #{result[i].repoURL}) 
                             span(style='margin-right: 20px; font-size: 18px')
-                                b Repo Name
-                        span(style='margin-right: 16px; color: #666;')
-                            b star 63
-                        span(style='margin-right: 16px; color: #666;')
-                            b fork 30
+                                b #{result[i].repoName}
                     p(style='margin: 0',style='color: #666').
-                        Some descriptions
-                    p(style='color: #999;') 1小时前由 
-                        a(style='color: #69C',href='/ddd') XXXXXXX 
-                        分享     
+                        #{result[i].desc}
+            - }
                         
         div#page
             // page....
